Some rearrange in p1

--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -58,11 +58,11 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 
 
-Определение Растригина.
+% Определение Растригина.
 
 
 
-Критерии
+%Критерии
 
 % TODO: may be p1?
 При описании и анализе динамики хаотических
@@ -81,22 +81,23 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 % }}}1
 
-\section{Существующие методы идентификации нелинейных динамических систем и их свойства}  % {{{1
+\section{Существующие методы идентификации нелинейных динамических систем}  % {{{1
 
 Ввиду того, что задача идентификации сложных динамических систем всегда была актуальной,
 и привлекала внимание многих исследователей, было создано
-значительное количество методов и систем идентификации.
+значительное количество методов и систем идентификации~\cite{eykhoff_id_base,leondes_modern_tu,nelles_nlsys_id}.
 Создание универсальной системы идентификации, безусловно подходящей для
 любой динамической системы, представляется практически нерешаемой задачей.
-Следовательно, каждый из существующих методов имеет свою область применения.
+Следовательно, каждый из существующих методов имеет свою область применения~\cite{rastr_intro}.
 Наиболее математически обоснованным являются методы идентификации
 линейных систем.
+
 Для очень узкого класса нелинейных систем является возможным
 получение аналитического выражения для значения параметра
 по измерениям входных и выходных сигналов. Чаще всего,
 для сложных динамических систем получить такую аналитическую
 зависимость невозможно. Поэтому широкое распространение получили методы
-с использованием параллельной модели, % TODO: cite
+с использованием параллельной модели~\cite{lung_id_sys,gropp_methods_id,deith_method_id_ds},
 в которых на вход и модели, и объекта подаётся один и тот же входной сигнал,
 и параметры модели настраиваются таким образом, чтобы выход модели
 был наиболее близким к выходу объекта. В какой-то мере
@@ -141,7 +142,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 основан на том, что на параметрический вход модели подаётся треугольный поисковый сигнал.
 Этот сигнал генерируется специальным генератором,
 состоящего из управляемого генератора прямоугольных колебаний,
-счётного триггера и интегратора%  \cite{auto_optim_intask,adopt_cont_sys}.
+счётного триггера и интегратора~\cite{adopt_cont_sys,rastr_adop_complex_sys}.
 
 
 \begin{figure}[htb!]
@@ -155,14 +156,16 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 Результаты предварительного моделирования показали,
 что данный метод, хоть и показывает хорошие результаты
-в задачах оптимизации, но для решения задач идентификации 
-практически не применим. Наличие дифференцирующего 
+в задачах оптимизации, но для решения задач идентификации
+практически не применим. Наличие дифференцирующего
 звена делает данный метод особо чувствительным к шумам
 измерения, а в задачах идентификации с параллельной моделью
 влияние входного сигнала \( u(t) \)
-на ошибку измерения \( e(t) \) 
+на ошибку измерения \( e(t) \)
 имеет вид мультипликативного шума,
 что полностью нарушает процесс поиска.
+Диапазон применимости этого метода расширяют разнообразные методы
+адаптации~\cite{auto_optim_intask}.
 
 % }}}2
 
@@ -172,12 +175,12 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 очередном шаге сравнивается текущее и предыдущее
 значения ошибки идентификации, и решение о смешении
 рабочей точки принимается в соответствии с выбранной
-тактикой случайного поиска.
-% \cite{rastr_rand_search_adopt,rastr_intro,ivanov_stoh_alg_int}.
+тактикой случайного поиска~\cite{rastr_rand_search,rastr_rand_search_adopt}.
+% \cite{ivanov_stoh_alg_int}.
 
 Наиболее известными и распространённым
 являются линейная и нелинейная тактика
-%\cite{rastr_rand_search,gladkov_optim_nongrad}.
+\cite{rastr_rand_search,gladkov_optim_nongrad}.
 При использовании линейной тактики
 в случае уменьшения ошибки идентификации
 производится шаг в том же направлении, что и предыдущий.
@@ -187,7 +190,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 В противном случае делается шаг назад.
 
 Метод имеет широкий диапазон применимости,
-но проявляет свои преимущества на сложных 
+но проявляет свои преимущества на сложных
 системах с большим количеством идентифицируемых параметров.
 В более простых случаях проявляется такой недостаток,
 как малая скорость поиска.
@@ -196,38 +199,15 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 \subsection{Непараметрические методы} % {{{2
 
-При использовании этого метода идентификации
-роль модели играет нейронная сеть
-% (рис.~\ref{f:neuro})
-% \cite{bodyan_osn_theor_ann,nelles_nlsys_id,chen_nls_id_radial_basis}.
-Коэффициенты нейронной сети настраиваются каким-либо
-известным алгоритмом таким образом, чтобы
-достичь минимума ошибки.
+Беспоисковые самонастраивающиеся системы~\cite{kozlov_nosearch_sns}
 
-Использование нейронной сети в качестве модели позволяет иметь дело с
-объектами, структура которых неизвестна или же слишком сложна для построения
-традиционной модели.
+Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
 
-При этом результат подобной идентификации сложно, а зачастую и невозможно
-применить где-либо, кроме имитационного моделирования.  Структура и
-коэффициенты нейронной сети не дают представления о структуре объекта и его
-параметрах.  При проведении идентификации с использованием нейросетевой модели
-в достаточно сложных случаях нет гарантии завершения процесса настройки сети и
-затруднительно оценить скорость поиска при настройке сети.
+Карабутов~\cite{karabutov_adapt_id_sys,saliga_id_ctl_black}
 
-С точки зрения информационных критериев оценки качества систем идентификации,
-нейросетевая идентификация в большинстве случает не даёт непосредственной
-информации об параметрах изучаемого объекта.  В данной работе такие методы
-рассматриваться не будут.
+Борцов~\cite{borcov} -- эле-мех.
 
-Тем не менее, нейронные сети можно использовать для настройка коэффициентов
-традиционной модели.  Такое использование может быть оправдано, если ввиду
-большой размерности выходного сигнала \(x\) или других причин, нет возможности
-сформировать скалярный критерий качества. В таком случае на первый слой
-нейронной сети можно подавать по-координатно выходы модели и объекта и
-проводить настройку нейронной сети таким образом, чтобы её выходные сигналы (а
-следовательно, и коэффициенты модели) обеспечивали минимум какого-либо
-синтетического критерия.
+Статистические методы поиска~\cite{rastr_stat_meth_search}
 
 % }}}2
 
@@ -236,7 +216,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 Метод адаптивно-поисковой идентификации с возмущением параметров одной модели
 изначально был разработан как метод поисковой оптимизации
 % \cite{mai_adopt_meth_direct,ivah_int_meth_direct,mai_iss_adop_alg_etalon,rastr_seu}.
-\cite{mich_92}
+\cite{mich_92,rastr_seu,kras_dyn_nsn}.
 Минимальные требования к априорной информации, хорошая помехоустойчивость и
 простота схемотехнической реализации позволили применить данный метод не только
 для решения задач оптимизации, но и для задач идентификации параметров сложных
@@ -341,31 +321,10 @@ $T_d$ --- параметрическое запаздывание.
 
 % }}}2
 
-Основы идентификации систем управления~\cite{eykhoff_id_base,eykhoff_modern_id,gropp_methods_id,deith_method_id_ds,lung_id_sys,seidg_id_su,leondes_modern_tu,nelles_nlsys_id}
 
-Введение в идентификацию объектов управления~\cite{rastr_intro,rastr_adop_complex_sys}.
 
-Случайный поиск в задачах оптимизации многопараметрических систем~\cite{rastr_rand_search,rastr_rand_search_adopt}.
 
-Статистические методы поиска~\cite{rastr_stat_meth_search}
 
-Беспоисковые самонастраивающиеся системы~\cite{kozlov_nosearch_sns}
-
-Системы экстремального управления~\cite{rastr_seu,kras_dyn_nsn}
-
-Основы информационной теории идентификации~\cite{info_cipkin,straton_inf,karabut}
-
-Адаптация в непрерывных системах автоматического поиска~\cite{adopt_cont_sys}
-
-Карабутов~\cite{karabutov_adapt_id_sys,saliga_id_ctl_black}
-
-Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
-
-Растригин~\cite{rastr_stat_meth_search,rastr_seu,rastr_intro,rastr_adop_complex_sys,rastr_rand_search}
-
-Борцов~\cite{borcov} -- эле-мех.
-
-Автоматическая оптимизация в задачах пространственного распределения~\cite{auto_optim_intask}
 
 
 % }}}1
@@ -382,13 +341,54 @@ $T_d$ --- параметрическое запаздывание.
 
 \section{Постановка задачи исследования}  % {{{1
 
-Критерии.
 
-Методы.
 
-Средства моделирования и измерения.
+У зв’язку з цим, метою дисертаційної роботи є створення
+нових методів ідентифікації нелінійних динамічних систем,
+для яких характерна хаотична динаміка,
+моделей процесов ідентификації параметрів таких систем.
 
-Проверка адекватности.
+Відповідно до поставленої мети у дисертаційній роботі необхідно
+вирішити такі завдання:
+
+\begin{itemize}
+
+  \item
+    за рахунок аналізу характристик, які зберігаються навіть
+    у хаотичних режимах,
+    розробити нові критерії ідентифікації,
+    які були б придатні для аналізу стану та динаміки
+    хаотичних систем, що створить обґрунтування працездатності систем
+    ідентифікації;
+
+  \item
+  розвинути існуючи та розробити нові методи пошуку, які б не мали
+  обмежень тих, що існують, та у повної мірі використовували можливості
+  паралельних обчислювань та переваг використання ансамблю
+  синергированних моделей;
+
+  \item
+  розвинути існуючи та розробити нові методи адаптації параметрів
+  системи ідентифікації, здатні пристосуватися до зміни режимів роботи
+  системи;
+
+  \item
+  розробити програмне забезпечення, придатне для моделювання як систем
+  хаотичної динаміки, так і систем ідентифікації;
+
+  \item
+  провести комп'ютерне моделювання процесів ідентифікації систем
+  хаотичної динаміки та дослідити їх працездатність, можливості та
+  характеристики.
+
+  \item
+    розробити нову модель хаотичної системи
+
+  \item
+    провести натурне моделювання
+
+\end{itemize}
+
 
 
 % }}}1
