--- a/p3/p3.tex
+++ b/p3/p3.tex
@@ -3081,7 +3081,7 @@ $p_{leW}$.
 то есть на оценивании параметрической
 ошибки идентификации $e(t)=p_o(t)-p_\mathrm{id}(t)$.
 
-В работах [cipkin,myPphd,xxx] были предложены информационные методы
+В работах~\cite{info_cipkin,straton_inf,atu_phd_thesis,karabut} были предложены информационные методы
 оценивания качества идентификации.
 Они отличаются универсальностью, и отображают
 успешность решения одной из основных задач
