Add abstracts to pdf refs

--- a/atu_annot_en_full.tex
+++ b/atu_annot_en_full.tex
@@ -1,6 +1,9 @@
 
 \clearpage
 
+\phantomsection
+\pdfbookmark[0]{АBSTRACT}{annotarnbookmark}
+
 \begin{center}
 \textbf{АBSTRACT}
 \end{center}
@@ -14,3 +17,62 @@ Qualifying scientific work as a manuscript.
 Thesis for obtaining the doctoral degree in technical sciences in the specialty
 \dissSpecId ``\dissSpecEn''. --- \institutionEn, \belongEn, \bookyear.
 
+The dissertation is devoted to the actual scientific and technical problem of
+identifying the complex technical systems parameters in the chaotic dynamics regime.
+Nonlinear dynamic systems are usual in modern technological and natural processes,
+and can exhibit chaotic properties in their dynamics.
+The existing systems for identifying nonlinear dynamic objects are practically
+useless in such conditions.
+
+The existing identification methods and search dynamics models are analyzed.
+Identified common features of identification systems, investigated factors that
+do not allow them to be used in the parameter identification task for chaotic systems.
+The necessity of creating new identification systems is grounded.
+
+It is shown that the use of integral criteria is necessary
+for the identification systems creation, that would be workable under conditions of chaotic
+dynamics. Considered a couple of physical justification for the criteria syntesys,
+both on the direct use of physical laws, and on empirical principles.
+
+In order to improve the identification system speed,
+a structure. which consist of a variety search agents and a search coordinatoris is proposed.
+Methods for estimating the parameter of the triplet of search agents are created, both with
+the direct use of the criterion and with the use of the quality function. The
+dependence of the identification error on the method and its parameters is
+investigated.
+
+A group of methods for the work of the search coordinators has been created,
+the dependencies of the identification quality on the parameters of the
+coordinator's interaction with the agents have been determined. A
+classification of system identification systems has been created, which allows
+not only briefly describe the set of methods used, but also allows us to
+create new identification systems when new methods of agents and coordinators
+appear. The properties of the set of proposed methods for an artificial
+quasistationary test system are investigated. A subset of methods is selected,
+which it is expedient to use in further research.
+
+The ``qontrol'' software was created, which is intended for modeling complex
+nonlinear dynamical systems, including in the analysis of chaotic dynamics systems processes identification.
+
+The working capacity and properties of the developed methods have been verified
+in solving the problem of identifying several nonlinear systems, both known
+chaotic dynamics systems, and new ones. It was determined that there are
+systems that are not chaotic, but from the point of view of identification they
+have common features. The influence of the parameters of the identification
+system on the quality of its work is investigated, which gives grounds for the
+adaptation of these parameters. It is determined that the type of criterion and
+the dynamics of agents have the greatest influence.
+
+The properties of the proposed identification methods are investigated on two
+real physical objects: the Kolpitts oscillator and the system of coupled
+relaxation elements. The methods have confirmed their efficiency, and it is
+found that the dependence of the quality of identification on its parameters
+for real systems has the same form as for the test ones.
+
+
+\textbf{Keywords:}
+chaotic systems,
+identification criterion,
+searching agent,
+searching coordinator,
+ensemble methods of the searching indetification.
