--- a/p1/p1.tex
+++ b/p1/p1.tex
@@ -175,8 +175,7 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 очередном шаге сравнивается текущее и предыдущее
 значения ошибки идентификации, и решение о смешении
 рабочей точки принимается в соответствии с выбранной
-тактикой случайного поиска~\cite{rastr_rand_search,rastr_rand_search_adopt}.
-% \cite{ivanov_stoh_alg_int}.
+тактикой случайного поиска~\cite{rastr_rand_search,rastr_rand_search_adopt,ivanov_stoh_alg_int}.
 
 Наиболее известными и распространённым
 являются линейная и нелинейная тактика
@@ -199,6 +198,10 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 \subsection{Непараметрические методы} % {{{2
 
+~\cite{medved_nepar_alg_id_nds}
+
+
+
 Беспоисковые самонастраивающиеся системы~\cite{kozlov_nosearch_sns}
 
 Козлов~\cite{kozlov_nosearch_sns} -- беспоисковые.
@@ -209,20 +212,20 @@ $M \{\rho [ y_t, y_t^{*} ] \} \to {\min}$''.
 
 Статистические методы поиска~\cite{rastr_stat_meth_search}
 
+Нейронка~\cite{chen_nn_for_nls_mod,chen_nls_id_radial_basis,patra_nds_id_cheb,narendra_id_ctl_ds_nn,bodyan_adapt_viyavl}
+
 % }}}2
 
 \subsection{Адаптивно-поисковая идентификация с возмущением параметра одной модели} % {{{2
 
 Метод адаптивно-поисковой идентификации с возмущением параметров одной модели
 изначально был разработан как метод поисковой оптимизации
-% \cite{mai_adopt_meth_direct,ivah_int_meth_direct,mai_iss_adop_alg_etalon,rastr_seu}.
-\cite{mich_92,rastr_seu,kras_dyn_nsn}.
+\cite{mich_92,ivah_int_meth_direct,mai_adopt_meth_direct,rastr_seu,kras_dyn_nsn,mai_iss_adop_alg_etalon,rastr_seu}.
 Минимальные требования к априорной информации, хорошая помехоустойчивость и
 простота схемотехнической реализации позволили применить данный метод не только
 для решения задач оптимизации, но и для задач идентификации параметров сложных
 систем
 (рис.~\ref{atu:f:apid1})
-%\cite{mai_akt_meth_sear,mai_sear_meth_akt,mai_akt_id_robot,ivah_alg_id_parm,mai_sear_meth_akt_id_ns}.
 
 \begin{figure}[htb!]
 \begin{center}
@@ -273,7 +276,10 @@ $T_d$ --- параметрическое запаздывание.
 Уменьшение поисковой частоты автоматически увеличивает амплитуду поисковых колебаний,
 что позволяет уменьшить вероятность попадания в локальный экстремум.
 При приближении к искомому значению амплитуда поисковых колебаний уменьшается,
-что приводит к повышению точности идентификации.
+что приводит к повышению точности идентификации~\cite{mai_sear_meth_akt_id_ns,mai_syntez_adop_id,bodyan_adapt_viyavl}.
+Сущесвцет модификация метода,
+позволяющая идентифицировать одноверменно несколько параметров
+за счёт применения случайно-детерменированных элементов~\cite{mich_92,mich_upr_prost_mech}.
 
 Тем не менее, данный метод также не лишён недостатков.
 Постоянные поисковые колебания приводят к возмущению динамики модели,
