At-work aref editing

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -188,7 +188,7 @@
 \vspace{3ex plus 3ex}
 
 \begin{tabular}{p{0.44\textwidth}p{0.2\textwidth}p{0.35\textwidth}}
-Вчений секретар спеціалізованої вченої ради 
+Вчений секретар спеціалізованої вченої ради
 &
 {~}
 &
@@ -237,9 +237,9 @@
 їх повну або обмежену непридатність.
 
 
-Тому проблема
+Тому вирішення проблеми
 ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки
-є \textit{актуальною}.
+є \textit{актуальним}.
 
 \smallskip
 \textbf{Зв'язок роботи з науковими програмами, планами, темами.}
@@ -267,16 +267,16 @@
 
 Результати було впроваджено у рамках науково-практичного дослідження
 ``Оцінка можливості заміни випробувань КА на стійкість до акустичного навантаження
-випробуваннями широкосмугової вібрації'', згідно договору \hbox{№~V-105-16-3} від 07.09.2016.
+випробуваннями широкосмугової вібрації'', згідно договору \hbox{№~V-105-16-3} від 07.09.2016
+(Спеціальне конструкторсько-технологічне бюро ІТМ НАН України, м.~Дніпро),
+та при ідентифікації режиму роботи вертикально-осьової вітроустановки з H-ротором Дар'є
+з врахуванням складно-періодичної або хаотичної структури коливань лопатей
+(Інститут транспортних систем і технологій НАН України, м.~Дніпро).
 
 \textbf{Мета і задачі дослідження.}
 Головною метою дослідження є створення нових методів ідентифікації з
 використанням адаптивно-пошукових принципів настроювання параметрів, які
-були б придатні для створення моделей систем, які проявляють хаотичну
-та/або схожу на хаотичну динаміку. В свою чергу, окремо ставиться задача
-розв'язання наукової проблеми створення адекватних моделей процесів
-ідентифікації хаотичних систем з використанням запропонованих нових
-методів, аналізу та дослідження їх характеристик в умовах невизначеності.
+були б придатні для створення моделей систем, які проявляють хаотичну динаміку.
 
 Для досягнення даної мети були поставлені наступні задачі:
 
@@ -285,28 +285,41 @@
   \item
   розробити нові критерії ідентифікації, які, на відміну від тих, що
   існують, були б придатні для аналізу стану та динаміки
-  хаотичних систем, що створить обґрунтування працездатності систем
+  систем з хаотичної динамікою, що створить базис для обґрунтування працездатності систем
   ідентифікації;
 
   \item
-  розвинути існуючи та розробити нові методи пошуку, які б не мали
-  обмежень тих, що існують, та у повної мірі використовували можливості
+  розвинути існуючи та розробити нові методи пошуку, які б
+  % не мали обмежень тих, що існують, та
+  у повної мірі використовували можливості
   паралельних обчислювань та переваг використання ансамблю
   синергированних моделей;
 
-  \item
-  розвинути існуючи та розробити нові методи адаптації параметрів
-  системи ідентифікації, здатні пристосуватися до зміни режимів роботи
-  системи;
+  % \item
+  % розвинути існуючи та розробити нові методи адаптації параметрів
+  % системи ідентифікації, здатні пристосуватися до зміни режимів роботи
+  % системи;
 
   \item
-  розробити програмне забезпечення, придатне для моделювання як систем
-  хаотичної динаміки, так і систем ідентифікації;
-
-  \item
+  створити моделі процесів
+  ідентифікації хаотичних систем з використанням запропонованих методів,
   провести комп'ютерне моделювання процесів ідентифікації систем
   хаотичної динаміки та дослідити їх працездатність, можливості та
-  характеристики.
+  характеристики;
+
+  \item
+  розробити нову фізичну систему з хаотичною поведінкою
+  на підставі системи зв'язаних релаксаційних елементів,
+  що надасть можливість дослідити та підтвердити переваги
+  розроблених методів ідентифікації;
+
+  \item
+  провести натурне моделювання процесів ідентифікації запропонованого
+  генератора хаосу, та порівняти з результатами комп'ютерного моделювання;
+
+  \item
+  розробити програмне забезпечення, придатне для моделювання систем
+  хаотичної динаміки, систем ідентифікації, предікції та управління.
 
 \end{itemize}
 
@@ -318,7 +331,7 @@
 \smallskip
 \textbf{Предметом дослідження є}
 математичні моделі процесів та методи
-адаптивно-пошукової ідентифікації технічних систем з хаотичною динамікою.
+ансамблевої ідентифікації технічних систем з хаотичною динамікою.
 
 \smallskip
 \textbf{Методи дослідження.}
@@ -332,20 +345,20 @@
 синтезу методів ідентифікації
 технічних систем хаотичної динаміки, створенні відповідних математичних
 моделей та дослідженні результатів моделювання процесів
-адаптивно-пошукової ідентифікації.
+ансамблевої ідентифікації.
 
 Основні наукові результати, що отримані в дисертаційної роботі, полягають
 в наступному:
 
 \noindent
 вперше:
-\\
+%
 \begin{itemize}
 
   \item
   створено критерії ідентифікації нелінійних динамічних систем,
   які, на відміну від тих, що існують, дозволяють оцінити їх стан та
-  хаотичну динаміку, та дають підстави для створення ефективних алгоритмів
+  хаотичну динаміку, а також дають підстави для створення ефективних алгоритмів
   настроювання параметрів моделей систем ідентифікації;
 
   \item
@@ -353,31 +366,32 @@
   адаптивно-пошукової парадигми з використанням ансамблю пошукових агентів,
   які взаємодіють проміж собою, які на відміну від методів, що використовують
   одну модель або пару моделей, значно підвищують швидкість пошуку та
-  здатні за мінімальний час  перелаштовуватися при різкій зміні параметра, а на
-  відміну від ройових алгоритмів, нові методи потребують значно меншої
+  здатні за мінімальний час  перелаштовуватися при різкій зміні параметрів, а на
+  відміну від ройових алгоритмів нові методи потребують значно меншої
   кількості моделей та забезпечують певні гарантії пошуку;
 
   \item
   створено нову класифікацію систем ідентифікації динамічних систем,
-  яка як вбирає у себе методи, що існують, так і дозволяє
+  яка, як вбирає у себе методи, що існують, так і дозволяє
   створювати нові методи ідентифікації за рахунок
   комбінування їх складових частин;
 
   \item
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
    при певних  умовах функціонування
-   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто з
-   системами хаотичної динаміки їх поєднує суттєва залежність від початкових
-   умов та вид атрактору, що також потребує використання нових методів ідентифікації;
+   мають властивості, що поєднують їх з системами хаотичної динаміки, тобто існує
+   % системами хаотичної динаміки їх поєднує
+   суттєва залежність від початкових
+   умов та характерний вид атрактору; %, що також потребує використання нових методів ідентифікації;
 
   \item
    запропоновано модель системи хаотичної динаміки системи зв'язаних релаксаційних генераторів,
-   яка відрізняєшся від існуючих відсутністю індуктивних компонентів,
+   яка відрізняється від існуючих відсутністю індуктивних компонентів,
    працездатністю при малих напругах та можливістю
-   керування частотним діапазоном у широкому діапазоні,
+   керування частотним діапазоном у широкому інтервалі,
    що сприяє процесу аналізу хаотичної динаміки
    фізичного об'єкту, перевірці адекватності математичної моделі
-   та властивостей системи ідентифікації стосовно цієї системи.
+   та властивостей системи ідентифікації.
 \end{itemize}
 
 \noindent
@@ -391,15 +405,15 @@
 
   \item
   підходи до адаптації параметрів систем
-  адаптивно-пошукової ідентифікації, які придатні використовувати поточну
+  ансамблевої ідентифікації, які придатні використовувати поточну
   інформацію від ансамблю сінергированих моделей, та коригувати глобальні
-  параметри пошуку;
+  параметри пошуку в умовах апріорної та поточної невизначеності;
 
   \item
     модель генератора Колпітца, яка враховує
     більшу кількість нелінійних ефектів,
     що забезпечує більш адекватні результати процесу
-    ідентифікації її параметрів новими методами;
+    ідентифікації її параметрів запропонованими методами;
 
 \end{itemize}
 
@@ -464,9 +478,9 @@
 \smallskip
 \textbf{Структура і обсяг роботи.}
 Дисертація складається з вступу, 6 розділів, що викладені на
-312 сторінках, висновків, списку літературних джерел з
+314 сторінках, висновків, списку літературних джерел з
 158 найменувань,
-1 додатка.
+3 додатків.
 Робота проілюстрована XXX рисунками.
 
 
@@ -2674,8 +2688,8 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
   \item
     проведена перевірка працездатності запропонованих методів
     на прикладах як відомих систем хаотичної динаміки,
-    так і на декількох інших динамічних систем, які проявляють
-    складну та хаотичну динаміку;
+    так і на декількох інших динамічних систем (модельних та фізичних),
+    які проявляють складну та хаотичну динаміку;
 
   \item
    визначено, що системи з сухим тертям з точки зору задачі ідентифікації
@@ -2718,6 +2732,7 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 \printbibliography[heading=none, keyword=confer]
 
 
+\penalty-9000
 
 \xsect{АНОТАЦІЯ}
 
@@ -2731,26 +2746,28 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 за спеціальністю
 \dissSpecId\ --- <<\dissSpecUa>>.
 \institutionUa, \belongUa, \cityUa, \bookyear.
+\penalty10000
 
 
 Робота присвячена актуальній науково-технічній проблемі
 ідентифікації параметрів складних технічних систем у режимі хаотичної динаміки.
 Нелінійні динамічні системи, розповсюджені в сучасних технологічних і
 природних процесах можуть проявляти хаотичні властивості в своїй динаміці.
-Існуючи системи ідентифікації нелінійних динамічних об'єктів практично не
-здатні функціонувати у таких умовах.
+% Існуючи системи ідентифікації нелінійних динамічних об'єктів практично не
+% здатні функціонувати у таких умовах.
 Проаналізовано існуючи методи ідентифікації та моделі динаміки пошуку.
 %Визначено спільні риси систем ідентифікації,
 %досліджено чинники, які не дозволяють використовувати їх
 %для ідентифікації параметрів хаотичних систем.
-Обґрунтована необхідність створення нових систем ідентифікації.
+%Обґрунтована необхідність створення нових систем ідентифікації.
 
 Показано, что для створення систем ідентифікації, які були б працездатними
 в умовах хаотичної динаміки, необхідно використання інтегральних критеріїв.
 Розглянуті фізични обґрунтуваня для створення критеріїв,
 як на прямому використанні фізичних законів, так і на емпіричних засадах.
 
-З метою підвищення швидкодії системи ідентифікації запропонована
+%З метою підвищення швидкодії системи ідентифікації
+Запропонована
 структура з використанням множини пошукових агентів і координатора пошуку.
 Створено методи оцінювання параметра трійкою пошукових агентів, як
 при безпосередньому використанні критерію, так і в разі застосування функції якості.
@@ -2758,9 +2775,9 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 Введено групу методів роботи координаторів пошуку,
 визначено залежності якості ідентифікації від параметрів взаємодії
 координатора з агентами.
-Створено класифікацію систем ідентифікації систем, які можуть реалізовувати хаотичну динаміку,
-яка дозволяє не тільки стисло вказувати набір використаних методів,
-а синтезувати нові системи ідентифікації при появі нових методів роботи агентів та координаторів.
+% Створено класифікацію систем ідентифікації систем, які можуть реалізовувати хаотичну динаміку,
+% яка дозволяє не тільки стисло вказувати набір використаних методів,
+% а синтезувати нові системи ідентифікації при появі нових методів роботи агентів та координаторів.
 % Досліджено властивості множини запропонованих методів для штучної
 % квазістаціонарній тестової системи. Обрана підмножина методів, які доцільно
 % використовувати у подальшому дослідженні.
@@ -2785,14 +2802,14 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 % що залежності якості ідентифікації від її параметрів для реальних систем мають той же вигляд,
 % що й для тестових.
 
-
-
 \textbf{Ключові слова:}
 хаотичні системи,
 критерій ідентифікації,
 пошуковий агент,
 координатор пошуку,
 ансамблеві методи пошукової ідентифікації.
+
+\penalty-1000
 
 \xsect{АННОТАЦИЯ}
 
@@ -2811,13 +2828,13 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 параметров сложных технических систем в режиме хаотической динамики. Нелинейные
 динамические системы, распространенные в современных технологических и
 природных процессах могут проявлять хаотические свойства в своей динамике.
-Существующие системы идентификации нелинейных динамических объектов практически
-не способны работать в таких условиях.
+% Существующие системы идентификации нелинейных динамических объектов практически
+% не способны работать в таких условиях.
 %
 Проанализированы существующие методы идентификации и модели динамики поиска.
 %Определены общие черты систем идентификации, исследованы факторы, которые не
 %позволяют использовать их для идентификации параметров хаотических систем.
-Обоснована необходимость создания новых систем идентификации.
+%Обоснована необходимость создания новых систем идентификации.
 
 Показано, что для создания систем идентификации, которые были бы работоспособными
 в условиях хаотической динамики, необходимо использование интегральных критериев.
@@ -2832,10 +2849,10 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 зависимости ошибки идентификации от метода и его параметров. Создана
 група методов работы координаторов поиска, определены зависимости качества
 идентификации от параметров взаимодействия координатора с агентами.
-Создана классификация систем идентификации систем,
-которая позволяет не только кратко указывать набор
-использованных методов, а синтезировать новые системы идентификации при
-появлении новых методов работы агентов и координаторов.
+% Создана классификация систем идентификации систем,
+% которая позволяет не только кратко указывать набор
+% использованных методов, а синтезировать новые системы идентификации при
+% появлении новых методов работы агентов и координаторов.
 % Исследованы свойства множества предложенных методов для искусственной квазистационарный тестовой
 % системы. Выбранно подмножество методов, которые целесообразно использовать в
 % дальнейшем исследовании.
@@ -2866,6 +2883,7 @@ $V_{\mathrm{on},i}$, $V_{\mathrm{off},i}$.
 координатор поиска,
 ансамблевые методы поисковой идентификации.
 
+\penalty-5000
 
 \xsect{ABSTRACT}
 
@@ -2940,6 +2958,10 @@ ensemble methods of the searching indetification.
 \clearpage
 
 {~}
+
+\clearpage
+
+{~}
 \vfill
 
 \begin{center}
@@ -2949,13 +2971,13 @@ ensemble methods of the searching indetification.
 
 Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2
 
-Друк різограф. Замовлення \No 02/17. Наклад --- 100 прим.
+% Друк різограф. Замовлення \No 52/18. Наклад --- 100 прим.
 
 % ДНВП <<Системні технології>>
 
 49006, Дніпро, пр.~Гагаріна,~4
 
-st@nmetau.edu.ua
+%st@nmetau.edu.ua
 
 \end{center}
 
