aref near last fix

--- a/atuaref2.tex
+++ b/atuaref2.tex
@@ -341,7 +341,7 @@
 
 \smallskip
 \textbf{Наукова новизна одержаних результатів.}
-Основний науковий результат полягає в розв'язанні науково-практичної проблеми
+Основний науковий результат полягає в розв'язанні науково-технічної проблеми
 синтезу методів ідентифікації
 технічних систем хаотичної динаміки, створенні відповідних математичних
 моделей та дослідженні результатів моделювання процесів
@@ -406,7 +406,7 @@
   \item
   підходи до адаптації параметрів систем
   ансамблевої ідентифікації, які придатні використовувати поточну
-  інформацію від ансамблю сінергированих моделей, та коригувати глобальні
+  інформацію від ансамблю синергированих моделей, та коригувати глобальні
   параметри пошуку в умовах апріорної та поточної невизначеності;
 
   \item
@@ -469,19 +469,21 @@
 
 \smallskip
 \textbf{Публікації.}
-З темі дисертації опубліковано
-50 наукових праць,
-з них
-29 входять до міжнародних наукометричних баз,
-13 статей опубліковано у матеріалах конференцій.
+За темою дисертаційної роботи опубліковано
+50 наукових праць, з них 1 --- без співавторів. Основний зміст і результати досліджень
+викладено у 36 друкованих працях [1--36] у наукових фахових виданнях, які
+рекомендовано Міністерством освіти і науки України,
+1 --- включено до бази Web of Science,
+28 --- включено до інших міжнародних наукометричних баз;
+13 робіт опубліковано у збірниках наукових праць та матеріалах конференцій.
 
 \smallskip
 \textbf{Структура і обсяг роботи.}
 Дисертація складається з вступу, 6 розділів, що викладені на
-314 сторінках, висновків, списку літературних джерел з
+312 сторінках, висновків, списку літературних джерел з
 158 найменувань,
 3 додатків.
-Робота проілюстрована XXX рисунками.
+Робота проілюстрована 295 рисунками.
 
 
 \xsect{ОСНОВНИЙ ЗМІСТ РОБОТИ}
@@ -2957,31 +2959,32 @@ ensemble methods of the searching indetification.
 
 \clearpage
 
-{~}
-
-\clearpage
 
 {~}
 \vfill
+\thispagestyle{empty}
 
 \begin{center}
 
 
-Підписано до друку xx.xx.\bookyear~р.
+Підписано до друку \_\_.\_\_.\bookyear~р.
 
 Формат $60 \times 84/16$  Папір друкарський. Ум. др.арк.~2
 
-% Друк різограф. Замовлення \No 52/18. Наклад --- 100 прим.
+Друк різограф. Наклад --- 100 прим.
 
-% ДНВП <<Системні технології>>
-
-49006, Дніпро, пр.~Гагаріна,~4
-
-%st@nmetau.edu.ua
-
+Надруковано в ПП Усик Т.Л. \\
+49000 м.~Дніпропетровськ пр.~Фестивальний, 24/85, Україна \\
+Свідоцтво про реєстрацію ВО №~163448 від 15.08.2002
 \end{center}
 
+
 \vfill
+
+\clearpage
+{~}
+\thispagestyle{empty}
+
 
 
 \end{document}
